@@ -18,3 +18,4 @@ Changelog
 07-19-2025 ... 0.4.1.1 ... Fix TT Resize UCI and Adjust Bench
 08-02-2025 ... 0.4.1.2 ... Add Non-Functional Changes from Multithread2
 08-02-2025 ... 0.5.0.0 ... Quiet History ........................ (39.9 +/- 19.9) , (8 + 0.08), (SPRT, 936), (https://sscg13.pythonanywhere.com/test/651/)
+08-02-2025 ... 0.5.1.0 ... Fix TT Score Casting ................. (71.8 +/- 26.1) , (8 + 0.08), (SPRT, 422), (https://sscg13.pythonanywhere.com/test/652/)
